<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">"WeatherProject2017"</string>
    <!-- Location -->
    <string name="dialog_error_nolocationservices_requiredforscan_marshmallow">Android 6 requires that Location Services are enabled to scan bluetooth peripherals.\nPlease, go to settings and enable it to start scanning peripherals</string>

    <!-- Bluetooth Adapter -->
    <string name="dialog_error_no_ble">Bluetooth Low Energy not supported</string>
    <string name="dialog_error_no_bluetooth">Bluetooth not available</string>
    <string name="action_settings">Settings</string>
    <!-- Settings -->
    <string name="settings_category_general">General</string>
    <string name="settings_autoscan_title">Autoscan</string>
    <string name="settings_autoscan_summary">Turn on to allow automatic background bluetooth scanning</string>
    <string name="settings_mobiledata_title">Mobile Data</string>
    <string name="settings_mobiledata_summary">Allow upload/download of weather station data over mobile data connection</string>
</resources>
